Add filter experiences (click on 1st modal to trigger)

--- a/messaging/inbox.html
+++ b/messaging/inbox.html
@@ -2084,7 +2084,7 @@
             <div class="_z4lmgp">
               <div role="dialog" aria-label="Filter messages" aria-modal="true" class="_1ucy1zjv" style="position: relative;">
                 <div class="_pa35zs">
-                  <button aria-label="Close" type="button" class="_oda838">
+                  <button aria-label="Close" type="button" class="_oda838" id="show-filter-modal__close">
                     <span class="_e296pg">
                       <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
                         <path d="m6 6 20 20"></path>
@@ -2117,7 +2117,7 @@
                         <div style="--gp-section-max-width:1120px;">
                           <div class="_le6wlg">
                             <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
-                              <div data-plugin-in-point-id="INBOX_FILTERS_LISTING" data-section-id="INBOX_FILTERS_LISTING" style="padding-top: 32px; padding-bottom: 32px;">
+                              <div id="filter-experiences-button" data-plugin-in-point-id="INBOX_FILTERS_LISTING" data-section-id="INBOX_FILTERS_LISTING" style="padding-top: 32px; padding-bottom: 32px;">
                                 <button type="button" class="_1yydbd74">
                                   <div class="_zjunba">
                                     <div>
@@ -2209,6 +2209,105 @@
         <div aria-live="assertive" aria-atomic="true"></div>
       </div>
     </div>
+
+    <div dir="ltr" id="show-filter-experience-modal" class="hidden">
+      <div class="_1t0jy5tw"></div>
+      <section>
+        <div class="_vxvq8x" data-testid="modal-container">
+          <div class="_z4lmgp">
+            <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+            <div class="_z4lmgp">
+              <div role="dialog" aria-label="Filter by Experiences" aria-modal="true" class="_njcq40o" style="position: relative;">
+                <div class="_pa35zs">
+                  <button aria-label="Back" type="button" class="_oda838" id="show-filter-experience-modal__close">
+                    <span class="_e296pg">
+                      <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
+                        <g fill="none">
+                          <path d="m20 28-11.29289322-11.2928932c-.39052429-.3905243-.39052429-1.0236893 0-1.4142136l11.29289322-11.2928932"></path>
+                        </g>
+                      </svg>
+                    </span>
+                  </button>
+                </div>
+                <div class="_z4lmgp" style="--gp-padding-xsmallAndAbove:24px; --gp-padding-smallAndAbove:24px; --gp-padding-mediumAndAbove:24px; --gp-padding-mediumPlusAndAbove:24px; --gp-padding-largeAndAbove:24px; --gp-padding-xlargeAndAbove:24px;">
+                  <header class="_q8mwh4">
+                    <div class="_1jqox1a"></div>
+                    <div class="_1s09xaf">
+                      <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                        <div class="_1q9sh65">
+                          <div class="c1yo0219 dir dir-ltr">
+                            <div style="--gp-section-max-width:1120px;">
+                              <div data-plugin-in-point-id="INBOX_LISTING_PICKER_HEADER" data-section-id="INBOX_LISTING_PICKER_HEADER">
+                                <div class="_cys8nx">Filter by Experiences</div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </h1>
+                    </div>
+                    <div class="_160ra1x"></div>
+                  </header>
+                  <div class="_10toigd">
+                      <main id="site-content">
+                          <div class="c1yo0219 dir dir-ltr">
+                              <div style="--gp-section-max-width:1120px;">
+                                  <div class="_le6wlg">
+                                      <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
+                                          <div data-plugin-in-point-id="INBOX_LISTING_PICKER"
+                                              data-section-id="INBOX_LISTING_PICKER"
+                                              style="padding-bottom: 72px;">
+                                              <div>
+                                                  <div><label class="_wyyf2n" for="3745068"><span
+                                                              class="_10ndlvp"><input id="3745068"
+                                                                  aria-label="Cooking Deep Fried Bright Orange Battered Eggs"
+                                                                  name="Cooking Deep Fried Bright Orange Battered Eggs"
+                                                                  class="_1yf4i4f" type="checkbox"><span
+                                                                  class="_41yoza"
+                                                                  data-checkbox="true"></span></span><img
+                                                              src="https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/c912cb91-6f94-4ef9-9d4e-fb310020e9e7.jpeg?aki_policy=small"
+                                                              class="_u13xd1" alt="">
+                                                          <div>
+                                                              <div class="_1mv7u80">Cooking Deep Fried Bright
+                                                                  Orange Battered Eggs</div>
+                                                              <div class="_1d3v5tj">Cooking Deep Fried Bright
+                                                                  Orange Battered Eggs</div>
+                                                          </div>
+                                                      </label></div>
+                                              </div>
+                                          </div>
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+                      </main>
+                  </div>
+                  <footer>
+                    <div class="c1yo0219 dir dir-ltr">
+                      <div style="--gp-section-max-width:1120px;">
+                        <div data-plugin-in-point-id="INBOX_LISTING_PICKER_FOOTER" data-section-id="INBOX_LISTING_PICKER_FOOTER">
+                          <div data-testid="filters-footer" class="_1fc5ti">
+                            <footer class="_zgc1p6">
+                              <button type="button" class="_za4ekfm">Clear</button>
+                              <button type="button" class="_1ku51f04">Select</button>
+                            </footer>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </footer>
+                </div>
+              </div>
+            </div>
+            <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+          </div>
+        </div>
+      </section>
+      <div class="_b21f4g">
+        <div aria-live="polite" aria-atomic="true"></div>
+        <div aria-live="assertive" aria-atomic="true"></div>
+      </div>
+    </div>
+
     <script src="../assets/js/pages/inbox.js" defer></script>
   </body>
 </html>
