Add tooltips of icons

--- a/messaging/inbox.html
+++ b/messaging/inbox.html
@@ -509,6 +509,7 @@
                                 <div class="_1enzugv">
                                   <div class="_1gsuu2g" id="inbox-items-header">
                                     <button
+                                      tooltip-hover
                                       data-testid="folder-subnav-button"
                                       id="folder-subnav-button"
                                       aria-label="Menu, Conversation List Options"
@@ -540,6 +541,14 @@
                                           </g>
                                         </svg>
                                       </span>
+                                      <div class="_1mqtq54" 
+                                        aria-hidden="true" 
+                                        data-popper-direction="ltr" 
+                                        style="max-width: 300px; position: fixed; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 134px);" 
+                                        data-popper-placement="bottom">
+                                          <span class="_6n0ip2" data-popper-arrow="true" style="position: absolute; left: 0px; transform: translate(22px, 0px);"></span>
+                                          <div class="_3hmsj">Open</div>
+                                      </div>
                                     </button>
                                     <div class="_1mrzp8e">
                                       <div
@@ -629,6 +638,7 @@
                                     </div>
                                     <div class="_b76aq7">
                                       <button
+                                        tooltip-hover
                                         id="host-inbox-filter-button"
                                         aria-label="Filter messages"
                                         type="button"
@@ -653,6 +663,16 @@
                                             ></path>
                                           </svg>
                                         </span>
+                                        <div 
+                                          class="_1mqtq54" 
+                                          aria-hidden="true" 
+                                          data-popper-direction="ltr" 
+                                          style="max-width: 300px; 
+                                          position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(-80px, -17px);" 
+                                          data-popper-placement="left">
+                                          <span class="_6n0ip2" data-popper-arrow="true" style="position: absolute; top: 0px; transform: translate(0px, 15px);"></span>
+                                          <div class="_3hmsj">Filter</div>
+                                        </div>
                                       </button>
                                     </div>
                                   </div>
@@ -1106,6 +1126,7 @@
                                     class="_1o7owzr"
                                   >
                                     <button
+                                      tooltip-hover
                                       data-testid="Star"
                                       aria-label="Star"
                                       type="button"
@@ -1130,8 +1151,18 @@
                                             fill-rule="evenodd"
                                           ></path>
                                         </svg>
-                                      </span></button
-                                    ><button
+                                      </span>
+                                      <div class="_1mqtq54 star" 
+                                        aria-hidden="true" 
+                                        data-popper-direction="ltr" 
+                                        style="max-width: 300px; position: fixed; right: 0px; top: 0px; margin: 0px;" 
+                                        data-popper-placement="bottom">
+                                          <span class="_6n0ip2" data-popper-arrow="true" style="position: absolute; left: 0px; transform: translate(22px, 0px);"></span>
+                                          <div class="_3hmsj">Star</div>
+                                      </div>
+                                      </button>
+                                      <button
+                                      tooltip-hover
                                       data-testid="Archive"
                                       aria-label="Archive"
                                       type="button"
@@ -1156,6 +1187,14 @@
                                           ></path>
                                         </svg>
                                       </span>
+                                      <div class="_1mqtq54 archive" 
+                                        aria-hidden="true" 
+                                        data-popper-direction="ltr" 
+                                        style="max-width: 300px; position: fixed; right: 0px; top: 0px; margin: 0px;" 
+                                        data-popper-placement="bottom">
+                                          <span class="_6n0ip2" data-popper-arrow="true" style="position: absolute; left: 0px;"></span>
+                                          <div class="_3hmsj">Archive</div>
+                                      </div>
                                     </button>
                                   </div>
                                   <button type="button" class="_bmkfr4f">
@@ -1164,6 +1203,7 @@
                                 </div>
                                 <div class="_125vg8ji">
                                   <a
+                                    tooltip-hover
                                     data-testid="panel-close-button"
                                     aria-label="Close"
                                     role="button"
@@ -1191,7 +1231,16 @@
                                         <path
                                           d="m26 6-20 20"
                                         ></path></svg></span
-                                  ></a>
+                                  >
+                                  <div class="_1mqtq54 star" 
+                                    aria-hidden="true" 
+                                    data-popper-direction="ltr" 
+                                    style="max-width: 300px; position: fixed; right: 0px; top: 0px; margin: 0px; transform: translate(0, 140px);" 
+                                    data-popper-placement="bottom">
+                                      <span class="_6n0ip2" data-popper-arrow="true" style="position: absolute; left: 0px; transform: translate(22px, 0px);"></span>
+                                      <div class="_3hmsj">Close</div>
+                                  </div>
+                                </a>
                                 </div>
                               </div>
                               <div class="_k5oh0g"></div>
@@ -1819,6 +1868,7 @@
                                 </div>
                                 <div class="_11zr3oqi">
                                   <a
+                                    tooltip-hover
                                     data-testid="panel-close-button"
                                     aria-label="Close"
                                     role="button"
@@ -1846,7 +1896,16 @@
                                         <path
                                           d="m26 6-20 20"
                                         ></path></svg></span
-                                  ></a>
+                                  >
+                                  <div class="_1mqtq54 star" 
+                                    aria-hidden="true" 
+                                    data-popper-direction="ltr" 
+                                    style="max-width: 300px; position: fixed; right: 0px; top: 0px; margin: 0px; transform: translate(-5px, 140px);" 
+                                    data-popper-placement="bottom">
+                                      <span class="_6n0ip2" data-popper-arrow="true" style="position: absolute; left: 0px; transform: translate(24px, 0px);"></span>
+                                      <div class="_3hmsj">Close</div>
+                                  </div>
+                                </a>
                                 </div>
                               </div>
                             </div>
